--- a/src/main/resources/templates/mainboard/updateForm.html
+++ b/src/main/resources/templates/mainboard/updateForm.html
@@ -40,7 +40,7 @@
             <input type="radio" th:field="*{category}" th:name="category" value="search">Pet Sitter
         </div>-->
         <div class="mb-3 input-group">
-            <input type="text" class="form-control" id="categoryInput" aria-label="Text input with radio button" placeholder="당신의 펫은 강아지인가요, 고양이인가요?" disabled="disabled">
+            <input type="text" class="form-control" id="categoryInput" aria-label="Text input with radio button" placeholder="당신은 펫부모입니까, 펫시터입니까?" disabled="disabled">
             <div class="input-group-text" id="categoryDiv">
                 <input class="form-check-input mt-0" type="radio" th:field="*{category}" th:value="offer" aria-label="Radio button for following text input">Pet Parant
                 <input class="form-check-input mt-0" type="radio" th:field="*{category}" th:value="search" aria-label="Radio button for following text input">Pet Sitter
